# Charles

./: LICENSE  README.md  docker-compose.yml
api/: CMakeLists.txt  Camera.cpp  Camera.h  Face.cpp  Face.h  FaceDetect.cpp  FaceDetect.h  Image.cpp  Image.h  README.md  TRetina.cpp  TRetina.h  charles.db  config.json  main.cpp
api/controllers/: EchoVideoFeed.cpp  EchoVideoFeed.h  StatsCtrl.cpp  StatsCtrl.h  VideoFeedCtrl.cpp  VideoFeedCtrl.h
api/plugins/: People.cpp  People.h  Vision.cpp  Vision.h
api/test/: CMakeLists.txt  test_main.cpp
api/utils/: Fps.cpp  Fps.h  Interval.cpp  Interval.h  Stats.cpp  Stats.h
api/vision/: Camera.cpp  Face.cpp  Face.h  FaceDetect.cpp  FaceDetect.h  Image.cpp  Image.h  TArcFace.cpp  TArcFace.h  TRetina.cpp  TRetina.h  TWarp.cpp  TWarp.h
frontend/: .env.development  index.html  package-lock.json  package.json
frontend/src/components/: StatsCard.vue
frontend/src/models/: stats.model.ts
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  stats.ts  user.ts
frontend/src/templates/: Main.vue
frontend/src/utils/: http.ts
frontend/src/views/: Dashboard.vue  UserListItem.vue  Users.vue
frontend/src/views/auth/: Login.vue
